# headwind-monorepo

./: .gitignore  ARCHITECTURE.md  COMPLEX_TESTS_REPORT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REFACTOR_TO_RULE_BASED.md  REMOVE_MODIFIERS_FIELD.md  VALUE_MAP_GUIDE.md  package.json  plan.md  plan2.md  pnpm-lock.yaml  turbo.json
.github/workflows/: deploy-playground.yml  publish-vscode.yml
apps/api/: package.json  test.http  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
apps/api/src/: index.ts
apps/vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package.json  readme.md  tsconfig.json  tsup.config.ts
apps/vscode-extension/resources/plugins/: swc_plugin.wasm
apps/vscode-extension/src/: config.ts  controlPanel.ts  controlPanelHtml.ts  cssOutput.ts  diagnostics.ts  diffPreview.ts  extension.ts  formatCode.ts  logger.ts  state.ts  transformOnSave.ts  types.ts  wasm.ts
apps/vscode-extension/webview/: tsconfig.json  vite.config.ts
apps/vscode-extension/webview/src/: App.tsx  dev-mock.ts  dev.html  index.tsx
apps/vscode-extension/webview/src/components/: ActionBar.tsx  ClassMapTable.tsx  Header.tsx  InfoBar.tsx  OptionsPanel.tsx  OutputArea.tsx  TabBar.tsx
apps/vscode-extension/webview/src/hooks/: useVSCodeBridge.ts
apps/vscode-extension/webview/src/styles/: panel.css  theme.css
apps/web-playground/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web-playground/public/: robots.txt  sitemap.xml
apps/web-playground/src/: About.tsx  App.tsx  api.ts  index.tsx  styles.css  wasm.ts
crates/: README.md
crates/core/: Cargo.toml  README.md
crates/core/examples/: basic_usage.rs
crates/core/src/: bundle.rs  lib.rs  merge.rs  naming.rs  normalize.rs  shorthand.rs  types.rs
crates/core/tests/: integration.rs
crates/css/: Cargo.toml
crates/css/src/: emit.rs  ir.rs  lib.rs
crates/swc_plugin/: Cargo.toml
crates/swc_plugin/src/: lib.rs
crates/transform/: Cargo.toml  README.md
crates/transform/src/: collector.rs  element_tree.rs  html.rs  jsx_visitor.rs  lib.rs
crates/tw_index/: BUNDLER_GUIDE.md  Cargo.toml  README.md
crates/tw_index/examples/: basic_usage.rs  bundle_classes.rs  bundle_without_index.rs  convert_classes.rs  debug_mappings.rs  test_complex_cases.rs  validate_mappings.rs
crates/tw_index/fixtures/: official-mappings.json
crates/tw_index/src/: bundle.rs  bundler.rs  context.rs  converter.rs  index.rs  lib.rs  loader.rs  merge.rs  naming.rs  normalize.rs  palette.rs  plugin_map.rs  shorthand.rs  theme_values.rs  value_map.rs  variant.rs
crates/tw_index/src/converter/: arbitrary.rs  color.rs  mod.rs  selector.rs  standard.rs  valueless.rs
crates/tw_index/src/css/: emit.rs  ir.rs
crates/tw_index/tests/: integration.rs  official_mappings.rs
crates/tw_parse/: Cargo.toml  README.md
crates/tw_parse/examples/: batch_parsing.rs
crates/tw_parse/src/: lib.rs  parser.rs  types.rs
crates/tw_parse/tests/: official_mappings.rs
crates/wasm/: Cargo.toml  README.md
crates/wasm/src/: lib.rs
crates/wasm/tests/: node_test.mjs
docs/: CLASS_CONTEXT_ARCHITECTURE.md  COMPLEX_TEST_RESULTS.md  PARSER_OPTIMIZATION.md
tools/: EXTRACT_GUIDE.md  README.md  package.json  rust-toolchain.toml
tools/scripts/: build-plugin.mjs  build-wasm-node.mjs  build-wasm.mjs  extract-tw-mappings.ts  release-vscode.sh  setup-sparse-clone.sh
