[package]
name = "headwind-tw-index"
version = "0.1.0"
edition = "2021"

[dependencies]
headwind-core = { path = "../core" }
headwind-tw-parse = { path = "../tw_parse" }
serde = { workspace = true }
serde_json = { workspace = true }
phf = { workspace = true }
indexmap = { workspace = true }
blake3 = { workspace = true }
palette = "0.7.6"
swc_css_ast = "18.0"
swc_css_codegen = "18.0"
swc_common = "18.0"
